data/forge_javadoc/1.8.9/raw/net/minecraft/world/gen/feature/WorldGenHugeTrees.md
---
title: "WorldGenHugeTrees"
description: "public abstract class WorldGenHugeTrees extends WorldGenAbstractTree"
package: "net/minecraft/world/gen/feature"
version: "1.8.9"
forgeBuild: "11.15.1.2318"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.8.9-11.15.1.2318/net/minecraft/world/gen/feature/WorldGenHugeTrees.html"
sourceType: javadoc
---

# WorldGenHugeTrees

**Inheritance:** java.lang.Object → net.minecraft.world.gen.feature.WorldGenerator → net.minecraft.world.gen.feature.WorldGenAbstractTree → net.minecraft.world.gen.feature.WorldGenHugeTrees

## Class signature

```java
public abstract class WorldGenHugeTrees extends WorldGenAbstractTree
```

## Constructors

- `WorldGenHugeTrees(boolean p_i46447_1_, int p_i46447_2_, int p_i46447_3_, IBlockState p_i46447_4_, IBlockState p_i46447_5_)`

## Methods

- `protected int func_150533_a(java.util.Random p_150533_1_)`
- `protected void func_175925_a(World worldIn, BlockPos p_175925_2_, int p_175925_3_)`
- `protected void func_175928_b(World worldIn, BlockPos p_175928_2_, int p_175928_3_)`
- `protected boolean func_175929_a(World worldIn, java.util.Random p_175929_2_, BlockPos p_175929_3_, int p_175929_4_)`

## Fields

- `protected int baseHeight` — The base height of the tree
- `protected int extraRandomHeight`
- `protected IBlockState leavesMetadata` — Sets the metadata for the leaves used in huge trees
- `protected IBlockState woodMetadata` — Sets the metadata for the wood blocks used
